adicionei uma página inicial

--- a/padraodecorativo.html
+++ b/padraodecorativo.html
@@ -27,7 +27,7 @@
 
     <main class="container">
         <section>
-            <h2>dale boy</h2>
+            <h2>Olá! seja bem vindo ao meu site</h2>
             <p>banda labaredas é a melhor banda do mundo</p>
         </section>
     </main>
