--- a/robobolado.html
+++ b/robobolado.html
@@ -15,11 +15,13 @@
         <div id="olho"></div>
         <div id="olho2"></div>
         <div id="o"></div>
+        <div class="container">
         <div id="boca"></div>
         <div id="corpo"></div>
         <div id="bracoe"></div>
         <div id="bracod"></div>
         <div id="p"></div>
+        </div>
         <div id="p2"></div>
     </center>
 </body>
