--- a/index.html
+++ b/index.html
@@ -6,12 +6,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="entrega.css">
 </head>
+
+<header>
+    <p>Seja bem vindo!</p>
+    <p>Esses foram meus primeiros projetos</p>
+</header>
+
 <body>
-    <a href="indexold.html" class="botao">Ir para o sistema solar</a>
-    <a href="carrosmuitorapidos.html" class="botao">Ir para Forma do Carro</a>
-    <a href="grafico.html" class="botao">Ir para Forma do Gráfico</a>
-    <a href="robobolado.html" class="botao">Ir para Forma do Robô</a>
-    <a href="padraodecorativo.html" class="botao">Ir para Forma do Padrão Decorativo</a>
-    <a href="apkmusica.html" class="botao">Ir para Forma do Aplicativo de Música</a>
+    <div class="container">
+        <a href="indexold.html" class="botao">
+            <img src="sistema solar.png">
+            <h1>Ir para o sistema solar</h1>
+        </a>
+
+        <a href="carrosmuitorapidos.html" class="botao">
+            <img src="carrinho.png">
+            <h1>Ir para Forma do Carro</h1></a>
+
+        <a href="grafico.html" class="botao">
+            <img src="grafico.png" alt="">
+            <h1>Ir para Forma do Gráfico</h1></a>
+    </div>
+
+    <div class="container2">
+        <a href="robobolado.html" class="botao">
+            <img src="robozin.png" alt="">
+            <h1>Ir para Forma do Robô</h1>
+        </a>
+        <a href="padraodecorativo.html" class="botao">
+            <img src="padraodecorativo.png" alt="">
+            <h1> para Forma do Padrão Decorativo</h1>
+        </a>
+        <a href="apkmusica.html" class="botao">
+            <img src="musica2.png">
+            <h1>Ir para Forma do Aplicativo de Música</h1
+        ></a>
+    </div>
 </body>
 </html>
