ajustei a pagina do robo

--- a/robobolado.html
+++ b/robobolado.html
@@ -6,23 +6,25 @@
     
 </head>
 <body>
-    <center>
-        <div id="bolinha"></div>
-        <div id="bolinha2"></div>
+        <div id="bolinha">
+            <div id="bolinha2"></div>
+        </div>
         <div id="esac"></div>
         <div id="linha"></div>
-        <div id="a"></div>
-        <div id="olho"></div>
-        <div id="olho2"></div>
-        <div id="o"></div>
-        <div class="container">
-        <div id="boca"></div>
-        <div id="corpo"></div>
-        <div id="bracoe"></div>
-        <div id="bracod"></div>
-        <div id="p"></div>
+
+        <div id="a">
+            <div id="olho"></div>
+            <div id="olho2">
+                <div id="o"></div>
+            </div>
         </div>
+        <div id="boca"></div>
+        <div class="container">
+            <div id="bracoe"></div>
+            <div id="corpo"></div>
+            <div id="bracod"></div>
+        </div>
+        <div id="p"></div>
         <div id="p2"></div>
-    </center>
 </body>
 </html>
